{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 206,
  "lineage": "5860c057-aa36-fa7b-d48d-ee006cabbd60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000ddae231ae333d2",
            "association_id": "eipassoc-00fcc4746d4c8c704",
            "domain": "vpc",
            "id": "eipalloc-000ddae231ae333d2",
            "instance": "i-0298f7d64bbfd383a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac687440f2b6fac2",
            "private_dns": "ip-10-0-101-200.ec2.internal",
            "private_ip": "10.0.101.200",
            "public_dns": "ec2-44-194-212-195.compute-1.amazonaws.com",
            "public_ip": "44.194.212.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "environment": "TEST",
              "owners": "EOPS"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:598124787131:instance/i-0298f7d64bbfd383a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0298f7d64bbfd383a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac687440f2b6fac2",
            "private_dns": "ip-10-0-101-200.ec2.internal",
            "private_ip": "10.0.101.200",
            "public_dns": "ec2-3-238-35-227.compute-1.amazonaws.com",
            "public_ip": "3.238.35.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01308ddf8713a6d3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc52e10afe1da98e",
            "tags": {
              "Name": "EOPS-TEST-BastionHost",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-BastionHost",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "EOPS-TEST-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-020fe6664d2f67289"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:security-group/sg-020fe6664d2f67289",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-020fe6664d2f67289",
            "ingress": [],
            "name": "EOPS-TEST-public-bastion-sg-20221021044245122400000006",
            "name_prefix": "EOPS-TEST-public-bastion-sg-",
            "owner_id": "598124787131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EOPS-TEST-public-bastion-sg",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-public-bastion-sg",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1470200644",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-020fe6664d2f67289",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3493774546",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020fe6664d2f67289",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071235c7ef2e930c4",
            "domain": "vpc",
            "id": "eipalloc-071235c7ef2e930c4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-76-19.compute-1.amazonaws.com",
            "public_ip": "23.22.76.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-us-east-1a",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-us-east-1a",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:internet-gateway/igw-0a8ccebca59d177a1",
            "id": "igw-0a8ccebca59d177a1",
            "owner_id": "598124787131",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071235c7ef2e930c4",
            "connectivity_type": "public",
            "id": "nat-0aeb1074d43615082",
            "network_interface_id": "eni-035158ee21b708099",
            "private_ip": "10.0.101.34",
            "public_ip": "23.22.76.19",
            "subnet_id": "subnet-0fc52e10afe1da98e",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-us-east-1a",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-us-east-1a",
              "environment": "TEST",
              "owners": "EOPS"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076db127ea8ff8a651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aeb1074d43615082",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076db127ea8ff8a65",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8ccebca59d177a1",
            "id": "r-rtb-0872bf212e2ca86d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0872bf212e2ca86d4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:route-table/rtb-0ce783564a4c8ae79",
            "id": "rtb-0ce783564a4c8ae79",
            "owner_id": "598124787131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-db",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-db",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:route-table/rtb-076db127ea8ff8a65",
            "id": "rtb-076db127ea8ff8a65",
            "owner_id": "598124787131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-private",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-private",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:route-table/rtb-0872bf212e2ca86d4",
            "id": "rtb-0872bf212e2ca86d4",
            "owner_id": "598124787131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-public",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-public",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004c7ed403ab31ea9",
            "route_table_id": "rtb-0ce783564a4c8ae79",
            "subnet_id": "subnet-01bd1f02e605c0100"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e833895ed38c3ac2",
            "route_table_id": "rtb-0ce783564a4c8ae79",
            "subnet_id": "subnet-09d0ef1b3c738a9fd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ddc40b0a6e27bc",
            "route_table_id": "rtb-076db127ea8ff8a65",
            "subnet_id": "subnet-06c14fc90d757f7ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec0b6f1b0693f619",
            "route_table_id": "rtb-076db127ea8ff8a65",
            "subnet_id": "subnet-023685d2b480aa838"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea63b884c0fd75f6",
            "route_table_id": "rtb-0872bf212e2ca86d4",
            "subnet_id": "subnet-0fc52e10afe1da98e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a5d3804d4cde7bb",
            "route_table_id": "rtb-0872bf212e2ca86d4",
            "subnet_id": "subnet-03336f78faad55a73"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-01bd1f02e605c0100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bd1f02e605c0100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-09d0ef1b3c738a9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d0ef1b3c738a9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-06c14fc90d757f7ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c14fc90d757f7ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-023685d2b480aa838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023685d2b480aa838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-0fc52e10afe1da98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc52e10afe1da98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:subnet/subnet-03336f78faad55a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03336f78faad55a73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "598124787131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "TEST",
              "kubernetes.io/cluster/EOPS-TEST-HCLEKS": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "EOPS"
            },
            "vpc_id": "vpc-03644ba0f730f6d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:598124787131:vpc/vpc-03644ba0f730f6d36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf3e39de67feb67d",
            "default_route_table_id": "rtb-05a622ae78d95c467",
            "default_security_group_id": "sg-026a6bd864a7e6a09",
            "dhcp_options_id": "dopt-003b1dbdcdfd52703",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03644ba0f730f6d36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a622ae78d95c467",
            "owner_id": "598124787131",
            "tags": {
              "Name": "EOPS-TEST-HCLEKS",
              "environment": "TEST",
              "owners": "EOPS"
            },
            "tags_all": {
              "Name": "EOPS-TEST-HCLEKS",
              "environment": "TEST",
              "owners": "EOPS"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}